# Typing-schema

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
tests/: test_model.py
typing_schema/: __init__.py  converter.py  model.py
