[project]
name = "typing-schema"
license = "MIT"
version = "0.1.1"
description = "Convert Python types and typing annotations into a simple schema representation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "jsonschema>=4.25.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
]

[project.urls]
source = "https://github.com/kasancode/typing-schema"
